--- a/models/csv_parser/hubsante.asyncapi.yaml
+++ b/models/csv_parser/hubsante.asyncapi.yaml
@@ -233,6 +233,7 @@ components:
       required:
       - ackDistributionId
     CreateCaseMessage:
+      $id: http://json-schema.org/draft-07/schema#
       required:
       - caseLocation
       properties:
@@ -263,7 +264,8 @@ components:
             \ pas \xEAtre modifi\xE9.  L'indicateur de fuseau horaire Z ne doit pas\
             \ \xEAtre utilis\xE9. Le fuseau horaire pour UTC doit \xEAtre repr\xE9\
             sent\xE9 par '-00:00'"
-          pattern: \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}
+          pattern: \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}[\-+]\d{2}:\d{2}
+          format: date-time
           examples:
           - '2022-09-27T08:23:34+02:00'
         initialAlert:
@@ -325,7 +327,8 @@ components:
         receivedAt:
           type: string
           description: "Groupe date heure de r\xE9ception de l'alerte"
-          pattern: \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}
+          pattern: \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}[\-+]\d{2}:\d{2}
+          format: date-time
           examples:
           - '2022-09-27T08:21:06+02:00'
         reporting:
@@ -1010,7 +1013,8 @@ components:
           description: "Groupe date heure de renseignement des coordonn\xE9es du point\
             \ cl\xE9 de la localisation. Permet de conna\xEEtre la fra\xEEcheur et\
             \ donc pertinence des informations pour intervenir."
-          pattern: \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}
+          pattern: \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}[\-+]\d{2}:\d{2}
+          format: date-time
           examples:
           - '2022-09-27T08:23:34+02:00'
         precision:
