--- a/web/lrm/server/package.json
+++ b/web/lrm/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "prestart": "npm install",
-    "start": "node index.js"
+    "start": "node index.js",
+    "setup": "cd ../client && npm install && npm run setup && npm run generate && cp -R dist/. ../server/ui"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-interceptor": "^1.2.0",
     "express-longpoll": "^0.0.6",
@@ -25,9 +27,9 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.0",
     "nodemon": "^2.0.20"
   },
   "eslintConfig": {
