--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "setup": "cp ../../../models/csv_parser/schema.json static/",
-    "dev": "nuxt",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
