--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "setup": "cp ../../../models/csv_parser/schema.json static/",
     "dev": "NODE_OPTIONS=--openssl-legacy-provider nuxt",
-    "build": "nuxt build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "NODE_OPTIONS=--openssl-legacy-provider nuxt generate",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "lintfix": "npm run lint:js -- --fix"
