add per-object metrics add prometheus first custom rule add alertmanager first custom receiver

--- a/hub/infra/monitoring/rabbitmq-servicemonitor.yml
+++ b/hub/infra/monitoring/rabbitmq-servicemonitor.yml
@@ -16,3 +16,20 @@ spec:
       path: /metrics
       tlsConfig:
         insecureSkipVerify: true
+    - port: prometheus-tls
+      scheme: https
+      interval: 15s
+      scrapeTimeout: 10s
+      path: /metrics/detailed
+      tlsConfig:
+        insecureSkipVerify: true
+    - port: prometheus-tls
+      scheme: https
+      interval: 15s
+      scrapeTimeout: 10s
+      path: /metrics/per-object
+      params:
+        queue:
+            - ".*"
+      tlsConfig:
+        insecureSkipVerify: true
