--- a/hub/infra/monitoring/admin-ingress.yml
+++ b/hub/infra/monitoring/admin-ingress.yml
@@ -4,7 +4,7 @@ metadata:
   name: admin-ingress
   annotations:
     ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^([^.?]*[^/])$ $1/ redirect;
     namespace: default
