--- a/models/csv_parser/hubsante.asyncapi.yaml
+++ b/models/csv_parser/hubsante.asyncapi.yaml
@@ -233,6 +233,7 @@ components:
       - ackDistributionId
     CreateCaseMessage:
       $id: http://json-schema.org/draft-07/schema#
+      x-id: schema.json#
       example: example.json#
       type: object
       title: CreateCaseMessage
