Adding JSON Schema to XSD converter

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ rootProject.name = 'SAMU-Hub-Sante'
 include 'models'
 include 'client'
 include 'hub:dispatcher'
+include 'models:csv_parser:json_schema2xsd'
