--- a/hub/infra/monitoring/ingress-admin.yaml
+++ b/hub/infra/monitoring/ingress-admin.yaml
@@ -1,24 +1,25 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: admin-ingress
+  name: ingress-admin
   annotations:
-    ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16
     nginx.ingress.kubernetes.io/rewrite-target: /$1$2
+    # Rewrite all URLs not ending with a segment containing . or ? with a trailing slash
+    # So basically we are rewriting all folder names with a trailing slash
+    # Ref.: https://stackoverflow.com/a/65941913
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^([^.?]*[^/])$ $1/ redirect;
     namespace: default
 spec:
-  ingressClassName: admin-nginx
+  ingressClassName: nginx-admin
   tls:
     - hosts:
         - admin.hub.esante.gouv.fr
       secretName: admin-cert
   rules:
-    - host: admin.hub.esante.gouv.fr
-      http:
+    - http:
         paths:
-          - path: /prometheus(/|$)(.*)
+          - path: /(.*)
             pathType: Prefix
             backend:
               service:
