--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.rabbitmq.ssl.trust-store-password=${DISPATCHER_TRUSTSTORE_PASSWORD}
 spring.rabbitmq.ssl.key-store=file:/certs/dispatcher.p12
 spring.rabbitmq.ssl.trust-store=file:/certs/trustStore
 
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.template.mandatory=true
+
 client.preferences.file=file:/config/client.preferences.csv
 # hubsante.default.message.ttl needs to be syncd with definitions.json :
 # expressed in seconds for readability and use in code,
