--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.rabbitmq.ssl.trust-store-password=${DISPATCHER_TRUSTSTORE_PASSWORD}
 spring.rabbitmq.ssl.key-store=file:/certs/dispatcher.p12
 spring.rabbitmq.ssl.trust-store=file:/certs/trustStore
 
+# enable publisher returns
+# https://docs.spring.io/spring-amqp/reference/html/#cf-pub-conf-ret
+# https://docs.spring.io/spring-amqp/reference/html/#template-confirms
+# https://github.com/spring-projects/spring-amqp-samples/tree/main/spring-rabbit-confirms-returns
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.template.mandatory=true
