add basic auth on prometheus and grafana

--- a/hub/infra/monitoring/admin-nginx-ingress-controller-values.yml
+++ b/hub/infra/monitoring/admin-nginx-ingress-controller-values.yml
@@ -1,3 +1,5 @@
 controller:
+  allowSnippetAnnotations: true # Ref.: https://github.com/kubernetes/ingress-nginx/blob/main/charts/ingress-nginx/values.yaml
+                                # required to propagate annotations set in ingress snippets in the operator (cf prometheus-operator-values.yml)
   ingressClassResource:
     name: nginx-admin
