--- a/hub/infra/rabbitmq/hubsante-topology/templates/client-permissions.yaml
+++ b/hub/infra/rabbitmq/hubsante-topology/templates/client-permissions.yaml
@@ -11,7 +11,11 @@ spec:
   permissions:
     write:  "hubsante"
     configure: ""
-    read: {{ printf "fr.health.%s.*" (.client_id | lower) }}
+{{ if .additional_permissions }}
+    read: {{ printf "^(fr.health.%s.*" .client_id }} {{ range .additional_permissions }}{{ printf "|fr.health.%s.*" . }} {{ end }} {{ printf ")" }}
+{{ else }}
+    read: {{ printf "^fr.health.%s.*" .client_id }}
+{{ end }}
   rabbitmqClusterReference:
     name: rabbitmq
     namespace: {{ $clusterNamespace }}
