--- a/hub/infra/rabbitmq/hubsante-topology/templates/client-topic-permissions.yaml
+++ b/hub/infra/rabbitmq/hubsante-topology/templates/client-topic-permissions.yaml
@@ -11,7 +11,11 @@ spec:
     name: {{ .client_id | lower }}-user # should be the same as the metadata.name of the user
   permissions:
     exchange: "hubsante"
-    write:  {{ printf "^fr.health.%s$" (.client_id | lower) }}
+{{ if .additional_permissions }}
+    write:  {{ printf "^(fr.health.%s$" .client_id }} {{ range .additional_permissions }}{{ printf "|fr.health.%s$" . }} {{ end }} {{ printf ")" }}
+{{ else }}
+    write:  {{ printf "^fr.health.%s$" .client_id }}
+{{ end }}
     read: ""
   rabbitmqClusterReference:
     name: rabbitmq
