--- a/hub/infra/monitoring/prometheus-operator-values.yml
+++ b/hub/infra/monitoring/prometheus-operator-values.yml
@@ -83,6 +83,9 @@ grafana:
     ingressClassName: nginx-admin
     annotations:
       nginx.ingress.kubernetes.io/rewrite-target: /$2
+      nginx.ingress.kubernetes.io/auth-type: basic
+      nginx.ingress.kubernetes.io/auth-secret: ingress-nginx-admin/basic-auth
+      nginx.ingress.kubernetes.io/auth-realm: 'Veuillez vous authentifier pour accéder à Grafana'
     tls:
       - hosts:
           - admin.hub.esante.gouv.fr
@@ -96,3 +99,8 @@ grafana:
   grafana.ini:
     server:
       root_url: "%(protocol)s://%(domain)s:%(http_port)s/grafana/"
+    auth:
+      disable_login_form: true
+    auth.anonymous:
+      enabled: true
+      org_role: Admin
