--- a/hub/infra/monitoring/prometheus-operator-values.yml
+++ b/hub/infra/monitoring/prometheus-operator-values.yml
@@ -64,7 +64,7 @@ alertmanager:
       nginx.ingress.kubernetes.io/rewrite-target: /$2
       nginx.ingress.kubernetes.io/auth-type: basic
       nginx.ingress.kubernetes.io/auth-secret: ingress-nginx-admin/basic-auth
-      nginx.ingress.kubernetes.io/auth-realm: 'Veuillez vous authentifier pour accéder à Prometheus'
+      nginx.ingress.kubernetes.io/auth-realm: 'Veuillez vous authentifier pour accéder à AlertManager'
     ingressClassName: nginx-admin
     tls:
       - hosts:
