--- a/hub/infra/remove-finalizers.yml
+++ b/hub/infra/remove-finalizers.yml
@@ -1,4 +1,4 @@
-# usage : kubectl patch <resourceType>/<resourceName> --patch-file <pathToThisFile> --type=merge
+# usage : kubectl patch rabbitmqcluster.rabbitmq.com/rabbitmq --patch-file <pathToThisFile> --type=merge
 # it will remove the finalizers and then allow deletion of the resource
 metadata:
   finalizers: []
