--- a/models/build.gradle
+++ b/models/build.gradle
@@ -1,14 +1,16 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.7.9'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'com.hubsante'
 archivesBaseName = 'hubsante-model'
-version = '0.1-SNAPSHOT'
+version = '0.2-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
+        languageVersion = JavaLanguageVersion.of(8)
     }
 }
 
@@ -17,9 +19,20 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.5'
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'jakarta.annotation:jakarta.annotation-api:1.3.5'
+    implementation 'com.networknt:json-schema-validator:1.0.87'
+    implementation 'org.projectlombok:lombok'
+    implementation 'org.junit.jupiter:junit-jupiter-params'
+
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
