move validator & deserializers in models lib

--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -34,6 +34,7 @@ configurations {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -42,7 +43,8 @@ ext {
 }
 
 dependencies {
-    implementation project(':models')
+//    implementation project(':models')
+    implementation 'com.hubsante:models:0.2-SNAPSHOT'
 
     implementation 'org.codehaus.groovy:groovy-json:3.0.9'
 
