--- a/models/build.gradle
+++ b/models/build.gradle
@@ -2,10 +2,10 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.9'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'maven-publish'
 }
 
 group = 'com.hubsante'
-archivesBaseName = 'hubsante-model'
 version = '0.2-SNAPSHOT'
 
 java {
@@ -14,12 +14,15 @@ java {
     }
 }
 
+bootJar {
+    enabled = false
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.5'
@@ -28,11 +31,20 @@ dependencies {
     implementation 'com.networknt:json-schema-validator:1.0.87'
     implementation 'org.projectlombok:lombok'
     implementation 'org.junit.jupiter:junit-jupiter-params'
+    implementation 'com.google.guava:guava:32.1.3-jre'
 
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testAnnotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 }
