--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 group = 'com.hubsante'
 archivesBaseName = 'hubsante-dispatcher'
-version = '0.8-SNAPSHOT'
+version = '0.11-SNAPSHOT'
 
 java {
     toolchain {
@@ -34,6 +34,15 @@ configurations {
 }
 
 repositories {
+    /*
+    * We use mavenCentral() for every dependency but the models library, which is published on GitHub Packages.
+    * So we add a additional maven repository to fetch it
+    *
+    * During development, it can be convenient to be able to test changes in the models lib without having to publish it
+    * In this case, we should execute the gradle task publishToMavenLocal() in the models project and then uncomment
+    * the mavenLocal() line below. It will push the models lib to the local .m2 folder, and the gradle build on this project
+    * will fetch it from there
+     */
 //    mavenLocal()
     mavenCentral()
     maven {
