fix client ack builder

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -22,17 +22,24 @@ jar {
 
 repositories {
     mavenCentral()
+    maven {
+        url = uri("https://maven.pkg.github.com/ansforge/SAMU-Hub-Sante")
+        credentials {
+            username = System.getenv('GITHUB_ACTOR')
+            password = System.getenv('GITHUB_TOKEN')
+        }
+    }
 }
 
 dependencies {
-    implementation project(':models')
+    implementation 'com.hubsante:models:0.2.3-SNAPSHOT'
 
     implementation 'com.rabbitmq:amqp-client:5.16.0'
     implementation 'org.slf4j:slf4j-simple:1.7.26'  // Used by RabbitMQ
     implementation 'org.json:json:20220924'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.5'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.2'
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'com.networknt:json-schema-validator:1.0.79'
     implementation 'org.jetbrains:annotations:23.0.0'
