--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
     id 'com.google.cloud.tools.jib' version '3.3.1'
     id 'jacoco'
+    id 'com.github.hierynomus.license' version '0.16.1'
 }
 
 group = 'com.hubsante'
@@ -93,6 +94,20 @@ tasks.named('test') {
     finalizedBy jacocoTestReport // report is always generated after tests run
 }
 
+license {
+    header = file('LICENSE.txt')
+    strictCheck = true
+
+    ext {
+        company = "Agence du Numerique en Sante (ANS)"
+        year = "2023-" + new Date().format('yyyy')
+    }
+
+    mapping 'java', 'JAVADOC_STYLE'
+    include "**/*.java"
+    exclude "**/test/**"
+}
+
 jib {
     from {
         image 'eclipse-temurin:11-jre'
@@ -104,6 +119,7 @@ jib {
 }
 
 import groovy.json.JsonSlurper
+
 def gitRefs() {
     try {
         def releaseCommitHash = null
