--- a/models/build.gradle
+++ b/models/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'maven-publish'
+    id 'com.github.hierynomus.license' version '0.16.1'
 }
 
 group = 'com.hubsante'
@@ -36,10 +37,52 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+license {
+    header = file('LICENSE.txt')
+    strictCheck = true
+
+    ext {
+        company = "Agence du Numerique en Sante (ANS)"
+        year = licenseYear()
+    }
+
+    mapping 'java', 'JAVADOC_STYLE'
+    include "**/*.java"
+    exclude "**/test/**"
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
+
+            pom {
+                name = 'models'
+                description = 'Models used by SAMU-Hub-Sante'
+                url = 'https://hub.esante.gouv.fr'
+                licenses {
+                    license {
+                        name = 'Apache-2.0'
+                        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'romainfd'
+                        name = 'Romain Fouilland'
+                        email = 'romain.fouilland@esante.gouv.fr'
+                    }
+                    developer {
+                        id = 'bbonche'
+                        name = 'Benjamin Bonche'
+                        email = 'benjamin.bonche.ext@esante.gouv.fr'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://github.com/ansforge/SAMU-Hub-Sante.git'
+                    url = 'https://github.com/ansforge/SAMU-Hub-Sante'
+                }
+            }
         }
     }
     repositories {
@@ -52,4 +95,17 @@ publishing {
             }
         }
     }
+}
+
+static def licenseYear() {
+    def currentYear = new Date().format('yyyy')
+    def licenseYear
+
+    if (currentYear != "2023") {
+        licenseYear = "2023-" + currentYear
+    } else {
+        licenseYear = "2023"
+
+    }
+    return licenseYear
 }
