--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -95,7 +95,7 @@ tasks.named('test') {
 }
 
 license {
-    header = file('LICENSE.txt')
+    header = file('LICENSE_HEADER.txt')
     strictCheck = true
 
     ext {
