--- a/models/build.gradle
+++ b/models/build.gradle
@@ -38,7 +38,7 @@ tasks.named('test') {
 }
 
 license {
-    header = file('LICENSE.txt')
+    header = file('LICENSE_HEADER.txt')
     strictCheck = true
 
     ext {
