--- a/.github/workflows/dispatcher-tests.yml
+++ b/.github/workflows/dispatcher-tests.yml
@@ -12,6 +12,9 @@ on:
 jobs:
   coverage:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: hub/dispatcher
 
     steps:
       - name: Checkout repository
@@ -23,8 +26,8 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: Go to dispatcher sub-project
-        run: cd hub/dispatcher
+#      - name: Go to dispatcher sub-project
+#        run: cd hub/dispatcher
 
       - name: Grant execute permission for Gradlew
         run: chmod +x gradlew
