--- a/models/generator/config/common/common.wrapper.generator-config.json
+++ b/models/generator/config/common/common.wrapper.generator-config.json
@@ -1,10 +1,10 @@
 {
-  "inputSpec": "./createCase.openapi.yml",
+  "inputSpec": "../../input/common.openapi.yml",
   "outputDir": "classes/",
   "generatorName": "java",
-  "templateDir": "templates/child-classes/",
+  "templateDir": "templates/wrapper/",
   "globalProperties": {
-    "models": "",
+    "models": "ReferenceWrapper",
     "apis": false,
     "apiTests": false,
     "apiDocs": false,
@@ -13,7 +13,7 @@
   },
   "additionalProperties": {
     "library": "native",
-    "modelPackage": "com.hubsante.model.cisu",
+    "modelPackage": "com.hubsante.model.common",
     "serializationLibrary": "jackson",
     "openApiNullable": true,
     "supportUrlQuery": false
