--- a/models/generator/config/RC-EDA/RC-EDA.generator-config.json
+++ b/models/generator/config/RC-EDA/RC-EDA.generator-config.json
@@ -1,5 +1,5 @@
 {
-  "inputSpec": "../../input/RC-EDA.openapi.yml",
+  "inputSpec": "./input/RC-EDA.openapi.yaml",
   "outputDir": "classes/",
   "generatorName": "java",
   "templateDir": "templates/child-classes/",
