--- a/models/generator/config/RC-EDA/RC-EDA.wrapper.generator-config.json
+++ b/models/generator/config/RC-EDA/RC-EDA.wrapper.generator-config.json
@@ -1,10 +1,10 @@
 {
-  "inputSpec": "../../input/RC-EDA.openapi.yml",
+  "inputSpec": "./input/RC-EDA.openapi.yaml",
   "outputDir": "classes/",
   "generatorName": "java",
   "templateDir": "templates/wrapper/",
   "globalProperties": {
-    "models": "CreateCaseWrapper",
+    "models": "createCaseWrapper",
     "apis": false,
     "apiTests": false,
     "apiDocs": false,
