--- a/models/generator/config/RC-EDA/RC-EDA.generator-config.json
+++ b/models/generator/config/RC-EDA/RC-EDA.generator-config.json
@@ -16,6 +16,7 @@
     "modelPackage": "com.hubsante.model.cisu",
     "serializationLibrary": "jackson",
     "openApiNullable": true,
-    "supportUrlQuery": false
+    "supportUrlQuery": false,
+    "enablePostProcessFile": true
   }
 }
