--- a/.github/workflows/generate-model.yaml
+++ b/.github/workflows/generate-model.yaml
@@ -4,26 +4,32 @@ on:
   schedule: # run every 24 hours
     - cron: '0 0 * * *'
 
+env:
+  SCHEMAS: "RC-EDA"
+  SCHEMA_VERSION: "1.3"
+
 jobs:
-  generate-spec-files:
+  generate-model:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./models/generator
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: setup Graphviz
+        uses: ts-graphviz/setup-graphviz@v1
 
       - name: Generate OpenAPI specs
         working-directory: ./models/csv_parser
         run: |
           pip install -r ./requirements.txt
-          python3 ./csv_parser.py -s RC-EDA -v 1.3
-
-        # we'd rather should iterate over a list of tabs
-
-        # Emsi-DC is not ready yet (examples method does not work)
-        # python3 ./csv_parser.py -s EMSI-DC -v 1.3
+          IFS=' ' read -ra SCHEMAS_ARRAY <<< "$SCHEMAS"
+          for SCHEMA in "${SCHEMAS_ARRAY[@]}"; do
+            python3 ./csv_parser.py -s $SCHEMA -v $SCHEMA_VERSION
+          done
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
@@ -48,16 +54,11 @@ jobs:
           npx @openapitools/openapi-generator-cli generate -c ./config/common/common.wrapper.generator-config.json --skip-validate-spec
           npx @openapitools/openapi-generator-cli generate -c ./config/common/common.distributionElement.generator-config.json --skip-validate-spec
 
-          npx @openapitools/openapi-generator-cli generate -c ./config/RC-EDA/RC-EDA.generator-config.json --skip-validate-spec
-          npx @openapitools/openapi-generator-cli generate -c ./config/RC-EDA/RC-EDA.wrapper.generator-config.json --skip-validate-spec
-
-        # we could do less verbose eventually
-
-        # we also could add a linter in the generator config (I don't know how to do it for now but the option exists)
-
-        # Emsi-DC is not ready yet (examples method does not work)
-        # npx @openapitools/openapi-generator-cli generate -c ./config/EMSI-DC/EMSI-DC.generator-config.json --skip-validate-spec
-        # npx @openapitools/openapi-generator-cli generate -c ./config/EMSI-DC/EMSI-DC.wrapper.generator-config.json --skip-validate-spec
+          IFS=' ' read -ra SCHEMAS_ARRAY <<< "$SCHEMAS"
+          for SCHEMA in "${SCHEMAS_ARRAY[@]}"; do
+            npx @openapitools/openapi-generator-cli generate -c ./config/$SCHEMA/$SCHEMA.generator-config.json --skip-validate-spec
+            npx @openapitools/openapi-generator-cli generate -c ./config/$SCHEMA/$SCHEMA.wrapper.generator-config.json --skip-validate-spec
+          done
 
       # about below: the strategy is still unclear to me
       # I think we should commit models/csv_parser/out (json schemas, openapi specs) and models/generator/classes (java classes)
