- intégration du modèle RC-EDA généré par l'action - renommage des schemas - migration de certaines classes vers un package common

--- a/.github/workflows/generate-model.yaml
+++ b/.github/workflows/generate-model.yaml
@@ -29,6 +29,7 @@ jobs:
           IFS=' ' read -ra SCHEMAS_ARRAY <<< "$SCHEMAS"
           for SCHEMA in "${SCHEMAS_ARRAY[@]}"; do
             python3 ./csv_parser.py -s $SCHEMA -v $SCHEMA_VERSION
+            mv ./out/$SCHEMA/$SCHEMA.openapi.yaml ../generator/input/$SCHEMA.openapi.yaml
           done
 
       - name: Set up JDK 11
