--- a/models/csv_parser/Makefile
+++ b/models/csv_parser/Makefile
@@ -29,5 +29,10 @@ run:
 	make setup
 	git add ..
 	make nomenclatures
-	git commit -m "[$(shell date +'%y.%m.%d %H:%M')] Model auto-generation"
-	git push origin $(TRACKING_BRANCH_NAME)
+	@if git diff-index --quiet HEAD -- ..; then \
+		@echo "No changes found, skipping push..."; \
+	else \
+		@echo "Changes detected, pushing updated files..."; \
+		git commit -m "[$(shell date +'%y.%m.%d %H:%M')] Model auto-generation"; \
+		git push origin $(TRACKING_BRANCH_NAME); \
+	fi
